<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/notes_bg"
    tools:context=".QuestionbankActivity">

  <TextView
      android:id="@+id/header_title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="20dp"
      android:fontFamily="@font/app"
      android:textAllCaps="true"
      android:text="@string/questionbank"
      android:textColor="#fff"
      android:textSize="30sp" />
  <GridLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginTop="20dp"
      android:layout_marginBottom="70dp"
      android:layout_marginLeft="10dp"
      android:layout_marginRight="10dp"
      android:layout_below="@+id/header_title"
      android:rowCount="3"
      android:columnCount="2">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Database"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_gravity="fill"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_margin="10dp"
        app:cardCornerRadius="14dp"
        android:clickable="true"
        android:focusable="true"
        app:cardElevation="8dp">

      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:gravity="center"
          android:layout_gravity="center_vertical|center_horizontal">
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/database"
            android:contentDescription="@string/todo" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dbms"
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            android:textColor="@color/purple_700"
            android:textAlignment="center"
            android:gravity="center_horizontal" />
      </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/compiler"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_gravity="fill"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_margin="10dp"
        app:cardCornerRadius="14dp"
        android:clickable="true"
        android:focusable="true"
        app:cardElevation="8dp">

      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:gravity="center"
          android:layout_gravity="center_vertical|center_horizontal">
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/compiler"
            android:contentDescription="@string/todo" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/compiler_design"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:textColor="@color/purple_700"
            android:textAlignment="center"
            android:gravity="center_horizontal" />
      </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/algo"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_gravity="fill"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_margin="10dp"
        app:cardCornerRadius="14dp"
        android:clickable="true"
        android:focusable="true"
        app:cardElevation="8dp">

      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:gravity="center"
          android:layout_gravity="center_vertical|center_horizontal">
        <ImageView
            android:layout_width="70dp"
            android:layout_height="80dp"
            android:src="@drawable/datastructure"
            android:contentDescription="@string/todo" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/design_and_analysis"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:textColor="@color/purple_700"
            android:textAlignment="center"
            android:gravity="center_horizontal" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/of_algorithm"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:textColor="@color/purple_700"
            android:textAlignment="center"
            android:gravity="center_horizontal" />
      </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/computer_graphics"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_gravity="fill"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_margin="10dp"
        app:cardCornerRadius="14dp"
        android:clickable="true"
        android:focusable="true"
        app:cardElevation="8dp">

      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:gravity="center"
          android:layout_gravity="center_vertical|center_horizontal">
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/graphic"
            android:contentDescription="@string/todo" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/computer_graphics"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:textColor="@color/purple_700"
            android:textAlignment="center"
            android:gravity="center_horizontal" />
      </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/human_computer_Interface"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_gravity="fill"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_margin="10dp"
        app:cardCornerRadius="14dp"
        android:clickable="true"
        android:focusable="true"
        app:cardElevation="8dp">

      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:gravity="center"
          android:layout_gravity="center_vertical|center_horizontal">
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/ui"
            android:contentDescription="@string/todo" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/human_computer"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:textAlignment="center"
            android:textColor="@color/purple_700"
            android:gravity="center_horizontal" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/interface_name"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:textAlignment="center"
            android:textColor="@color/purple_700"
            android:gravity="center_horizontal" />
      </LinearLayout>


    </androidx.cardview.widget.CardView>

  </GridLayout>

</RelativeLayout>